# Goods_Tracking

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  example
Inc/: colorprint.h  goods.h  goods_track.h  menu_utility.h  webconn.h
SQLite3Cpp/: CMakeLists.txt  Doxyfile
SQLite3Cpp/Inc/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  ExecuteMany.h  SQLiteCpp.h  Savepoint.h  Statement.h  Transaction.h  VariadicBind.h
SQLite3Cpp/Src/: Backup.cpp  Column.cpp  Database.cpp  Exception.cpp  Savepoint.cpp  Statement.cpp  Transaction.cpp
SQLite3Cpp/Test/: Backup_Test.cpp  Column_Test.cpp  Database_Test.cpp  Exception_Test.cpp  ExecuteMany_Test.cpp  Savepoint_Test.cpp  Statement_Test.cpp  Transaction_Test.cpp  VariadicBind_Test.cpp
SQLite3Cpp/cmake/: SQLiteCpp.cmake  SQLiteCppConfig.cmake.in  SQLiteCppExamples.cmake  SQLiteCppOptions.cmake  SQLiteCppTest.cmake
SQLite3Cpp/examples/example1/: main.cpp
SQLite3Cpp/examples/example2/: main.cpp
Src/: goods_track.cpp  webconn.cpp
Test/: GoodsTrack_Test.cpp  Goods_Test.cpp  webConn_Test.cpp
cmake/: CodeCoverage.cmake  GoodsTrack.cmake  GoodsTrackExample.cmake  GoodsTrackTest.cmake
examples/: main.cpp
